2023-08-28 07:53
1. Удалены лишние импорты.

2023-08-18 23:15

1. Добавлено журналирование в MLflow.


2023-08-10 08:05

1. Исправлены незнечительные ошибки в текстах.


2023-08-09 23:10

1. Базовая модель вынесена в отдельный файл sources/Baseline.ipynb.


2023-08-09 07:22

1. Тренировочный набор данных сохранён в отдельный файл train_set.joblib, чтобы обеспечить
его постоянство в разных тетрадках.
2. Файлы с расширением .joblib добавлены в .gitignore.



2023-08-09 06:11

1. Удалены лишние импорты в тетрадках.



2023-08-08 21:26

1. В useful_funcs.py перенесены функции для оценки моделей:
- get_cv_scores,
- get_train_score,
- get_cv_pred,
- plot_roc_curve_for_random_clf,
- plot_roc_curve,
- agg_scores,
- score_box_plot,
- evaluate_model,
- compare_models.



2023-08-08 07:35

1. Исследовательский анализ перенесён в файл EDA.ipynb
2. Часть повторяющихся функций (make_notifier, plot_ecdf_with_target, check_target_imbalance, plot_corr_matrix) вынесены в отдельный модуль useful_funcs.py.
3. Создан файл change_log.txt, в который будет заноситься информация об изменениях в проекте.
