@@ -286,6 +286,7 @@ dependencies:
       - backports-tempfile==1.0
       - backports-weakref==1.0.post1
       - bcrypt==4.0.1
+      - black==23.7.0
       - blinker==1.6.2
       - boto3==1.28.25
       - botocore==1.31.25
@@ -332,6 +333,7 @@ dependencies:
       - msrest==0.7.1
       - msrestazure==0.6.4
       - multidict==6.0.4
+      - mypy-extensions==1.0.0
       - ndg-httpsclient==0.5.1
       - oauthlib==3.2.2
       - orjson==3.9.4
@@ -363,6 +365,7 @@ dependencies:
       - starlette==0.22.0
       - starlette-exporter==0.16.0
       - tabulate==0.9.0
+      - tokenize-rt==5.2.0
       - tritonclient==2.36.0
       - uvicorn==0.23.2
       - uvloop==0.17.0
