@@ -1,3 +1,9 @@
+2023-08-28 22:58
+1. Установлен автоформатер Black для работы с jupyter
+2. В requirements.yml экспортировано окружение с установленным автоформатером
+3. Автоформатером приведено в порядок оформление файла sources/useful_funcs.py
+
+
 2023-08-28 07:53
 1. Удалены лишние импорты.
 
